--- a/vic.nguyen_website/index.html
+++ b/vic.nguyen_website/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/svg+xml" href="assets/icons/heart.svg" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -225,7 +226,7 @@
           <div class="projects-track" data-carousel-track>
             <article class="project-card card">
               <div class="card-top">
-                <h3>Blossom Drift Journal App 🌸</h3>
+                <h3>Blossom Drift Journal🌸</h3>
                 <p class="stack">Python · Tkinter · React · Node.js · Express · MongoDB</p>
                 <p>
                   A GUI-based mental health journaling app with autosave, customizable prompts,
@@ -242,7 +243,7 @@
                 </ul>
               </div>
               <div class="card-actions">
-                <a href="https://github.com/vicngan/blossom-drift" target="_blank" rel="noreferrer noopener"
+                <a href="https://github.com/vicngan/my-care-journal-" target="_blank" rel="noreferrer noopener"
                   >View Code</a
                 >
                 <button class="ghost-button" data-modal="blossom-modal">More Details</button>
@@ -251,7 +252,7 @@
 
             <article class="project-card card">
               <div class="card-top">
-                <h3>Smart Record App 🩺</h3>
+                <h3>Heartline Smart Record 🩺</h3>
                 <p class="stack">Python · React · Node.js · MongoDB</p>
                 <p>
                   A patient vitals tracking system that simulates an EMR for clinical data
@@ -270,7 +271,7 @@
                 </ul>
               </div>
               <div class="card-actions">
-                <a href="https://github.com/vicngan/smart-record-app" target="_blank" rel="noreferrer noopener"
+                <a href="https://github.com/vicngan/smart_record.py" target="_blank" rel="noreferrer noopener"
                   >View Code</a
                 >
                 <button class="ghost-button" data-modal="smart-modal">Design Story</button>
@@ -295,7 +296,7 @@
                 </ul>
               </div>
               <div class="card-actions">
-                <a href="https://github.com/vicngan/heartline-care-companion" target="_blank" rel="noreferrer noopener"
+                <a href="https://github.com/vicngan/heartline_companion.py" target="_blank" rel="noreferrer noopener"
                   >View Code</a
                 >
                 <button class="ghost-button" data-modal="heartline-modal">Care Flow</button>
@@ -411,7 +412,7 @@
           >
         </div>
         <div class="contact-chips">
-          <a href="https://calendly.com/vicngan/matcha-chat" target="_blank" rel="noreferrer noopener">☕ Book a matcha chat</a>
+          <a href="https://calendly.com/victoria-n-nguyen05/new-meeting" target="_blank" rel="noreferrer noopener">☕ Book a matcha chat</a>
           <a href="assets/V.Nguyen_CS_Resume_2024-11.pdf" target="_blank" rel="noreferrer noopener">📄 Download resume</a>
           <a href="mailto:Vicngan@umich.edu?subject=Voice%20note%20for%20Victoria" rel="noreferrer noopener">🎙️ Send a quick voice note</a>
         </div>
