--- a/heartline_landing/index.html
+++ b/heartline_landing/index.html
@@ -6,17 +6,17 @@
     
     <!-- Open Graph / Facebook / LinkedIn -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://vicngan.github.io/heartline-landing/">
+    <meta property="og:url" content="https://vicngan.github.io/heartline_landing/">
     <meta property="og:title" content="Heartline Care Companion">
     <meta property="og:description" content="Your personal mental health companion. Track your wellness journey with personalized insights, mood tracking, and supportive tools.">
-    <meta property="og:image" content="https://vicngan.github.io/heartline-landing/Heartline_care_preview.png">
+    <meta property="og:image" content="https://vicngan.github.io/heartline_landing/Heartline_care_preview.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://vicngan.github.io/heartline-landing/">
+    <meta property="twitter:url" content="https://vicngan.github.io/heartline_landing/">
     <meta property="twitter:title" content="Heartline Care Companion">
     <meta property="twitter:description" content="Your personal mental health companion. Track your wellness journey with personalized insights, mood tracking, and supportive tools.">
-    <meta property="twitter:image" content="https://vicngan.github.io/heartline-landing/Heartline_care_preview.png">
+    <meta property="twitter:image" content="https://vicngan.github.io/heartline_landing/Heartline_care_preview.png">
 
     <title>Heartline Care Companion</title>
     
